ICTJ:ICT-3703 The following statistics are logged every 10 minutes (default) - total number of messages received from sources NC and processed - total number of FaultStates processed - Number of activations - Number of terminations - Number of messages in the queue waiting to be processed
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@213094 523d945c-050c-4681-91ec-863ad3bb968a